# bulk

./: CMakeLists.txt  ComandHandler.cxx  ComandHandler.hxx  Logger.cxx  Logger.hxx  OutputHandler.hxx  README.md  bulk.cpp
.github/workflows/: release.yml
bulk/: CMakeLists.txt  ComandHandler.cxx  ComandHandler.hxx  ConsoleLogger.cxx  ConsoleLogger.hxx  FileLogger.cxx  FileLogger.hxx  Logger.cxx  Observer.hxx  OutputHandler.cxx  bulk.cpp
test_bulk/: CMakeLists.txt  test.cpp
